# arduino.midilooper.midilooper

./: .gitignore  CMakeLists.txt  README  README.md  build.sh
src/: DataType.h  Main.cpp  Setup.h  main.cpp
src/Application/: Application.cpp  Application.h  Config.cpp  Config.h  InputManager.cpp  InputManager.h  InputReader.cpp  InputReader.h  ListenerServer.cpp  ListenerServer.h  Logger.cpp  Logger.h  MIDIListener.cpp  MIDIListener.h  MIDIPlayer.cpp  MIDIPlayer.h  MemoryManager.cpp  MemoryManager.h  OutputManager.cpp  OutputManager.h  PlayerServer.cpp  PlayerServer.h  Timer.cpp  Timer.h  UserInterface.cpp  UserInterface.h
src/Session/: Event.h  ListenerClient.cpp  ListenerClient.h  PlayerClient.cpp  PlayerClient.h  Session.cpp  Session.h  Track.cpp  Track.h
src/Utils/: Singleton.h  Timer.cpp  Timer.h
